--- a/index.html
+++ b/index.html
@@ -23,29 +23,36 @@
   </header>
 
   <!--hero section-->
-  <section class="hero">
-    <div>
-      <h2 class="about-me">About Me</h2>
-    </div>
+  <div class="hero">
 
-  </section>
+    <!-- About me section -->
+    <section id="about-me">
 
 
-  <!-- About me section -->
-  <section class=".hero">
-    <h2>My Work</h2>
-    <div>
-      <img class=".biopic" src="./assets/JanellMyrickProfilePic.jpg" alt="Janell Myrick">
-    </div>
-  </section>
+      <div class="card">
+        <h2 style="text-align:left">About Me</h2>
+        <div class="container">
+          <h2>Janell Myrick</h2>
+          <p class="title">Full Stack Web Developer</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        </div>
+        <img src="./assets/JanellMyrickProfilePic.jpg" alt="Janell Myrick" style="width:25%">
+
+      </div>
+    </section>
+  </div>
+
 
   <!--my work section -->
-  <section>
-    <h2>Contact Me</h2>
+  <section id="my-work">
+    <h2>My Work</h2>
   </section>
 
   <!--contact me section-->
-  <section></section>
+
+  <section id="contact-me">
+    <h2>Contact Me</h2>
+  </section>
 
   <!--footer-->
   <footer>
