add border boxes, aligned main container

--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
 
 
       <div class="card">
-        <h2 style="text-align:left">About Me</h2>
-        <div class="container">
-          <h2>Janell Myrick</h2>
-          <p class="title">Full Stack Web Developer</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <h2 class="about-me">About Me</h2>
+        <div class="main-container">
+          <div class="container">
+            <h2 class="name">Janell Myrick</h2>
+            <p class="title">Full Stack Web Developer</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          </div>
+          <img class="biopic" src="./assets/JanellMyrickProfilePic.jpg" alt="Janell Myrick">
         </div>
-        <img src="./assets/JanellMyrickProfilePic.jpg" alt="Janell Myrick" style="width:25%">
-
       </div>
     </section>
   </div>
