attributes to contact section

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 
     <!-- About me section -->
     <section id="about-me">
-
-
       <div class="card">
         <h2 class="about-me">About Me</h2>
         <div class="main-container">
@@ -37,7 +35,7 @@
             <p class="title">Full Stack Web Developer</p>
             <p>Some text that describes me lorem ipsum ipsum lorem.</p>
           </div>
-          <img class="biopic" src="./assets/JanellMyrickProfilePic.jpg" alt="Janell Myrick">
+          <img class="bio-pic" src="./assets/JanellMyrickProfilePic.jpg" alt="Janell Myrick">
         </div>
       </div>
     </section>
@@ -45,15 +43,44 @@
 
 
   <!--my work section -->
-  <section id="my-work">
-    <h2>My Work</h2>
-  </section>
+  <div class="examples">
+    <section id="my-work">
+      <div class="example-container">
+        <h2 class="work-label">My Work</h2>
+      </div>
+      <div class="work-links">
 
+
+      </div>
+    </section>
+  </div>
+  </div>
   <!--contact me section-->
 
+
+
   <section id="contact-me">
-    <h2>Contact Me</h2>
+    <div class="contact-card">
+      <div>
+        <h2 class="contact-label">Contact Me</h2>
+      </div>
+    
+    <div class="cm-buttons">
+      <nav>
+        <ul>
+          <li>
+            <a href="#">janell.myrick@gmail.com</a> <strong> { Email }</strong> </a>
+          </li>
+          <li><strong>Github:</strong> <a href="#">https://github.com/luvthatduck</a></li>
+          <li><strong>LinkedIn:</strong> <a href="#">www.linkedin.com/in/janell-myrick-2580a0203</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
   </section>
+
+
+
 
   <!--footer-->
   <footer>
