added work container

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- About me section -->
     <section id="about-me">
       <div class="card">
-        <h2 class="about-me">About Me</h2>
+        <h2 class="about-me">ABOUT ME</h2>
         <div class="main-container">
           <div class="container">
             <h2 class="name">Janell Myrick</h2>
@@ -43,40 +43,50 @@
 
 
   <!--my work section -->
-  <div class="examples">
-    <section id="my-work">
-      <div class="example-container">
-        <h2 class="work-label">My Work</h2>
+
+  <section id="my-work">
+    <div class="example-container">
+      <h2 class="work-label">MY WORK</h2>
+
+      <div class="work-container">
+        <div class="work-links">
+          <a href="https://luvthatduck.github.io/run-buddy/"></a>
+          <a href="https://luvthatduck.github.io/horiseon-silver-octo-tribble/"></a>
+          <a href="https://placeholder.com"><img
+              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+          <a href="https://placeholder.com"><img
+              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+          <a href="https://placeholder.com"><img
+              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+          <a href="https://placeholder.com"><img
+              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+          <a href="https://placeholder.com"><img
+              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+          <a href="https://placeholder.com"><img
+              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+        </div>
       </div>
-      <div class="work-links">
+    </div>
+  </section>
 
 
-      </div>
-    </section>
-  </div>
-  </div>
   <!--contact me section-->
-
-
-
   <section id="contact-me">
     <div class="contact-card">
-      <div>
-        <h2 class="contact-label">Contact Me</h2>
+      <h2 class="contact-label">Contact Me</h2>
+      <div class="cm-buttons">
+        <nav>
+          <ul>
+            <li>
+              <a href="janell.myrick@gmail.com/" target="_blank"><strong> { Email }</strong> </a>
+            </li>
+            <li> <strong>{ P/ 209.620.6638 }</strong></li>
+            <li> <a href="https://www.linkedin.com/in/janell-myrick-2580a0203/" target="_blank"><strong> { LinkedIn
+                  }</strong></a></li>
+          </ul>
+        </nav>
       </div>
-    
-    <div class="cm-buttons">
-      <nav>
-        <ul>
-          <li>
-            <a href="#">janell.myrick@gmail.com</a> <strong> { Email }</strong> </a>
-          </li>
-          <li><strong>Github:</strong> <a href="#">https://github.com/luvthatduck</a></li>
-          <li><strong>LinkedIn:</strong> <a href="#">www.linkedin.com/in/janell-myrick-2580a0203</a></li>
-        </ul>
-      </nav>
     </div>
-  </div>
   </section>
 
 
