my work set up contact me fixed

--- a/index.html
+++ b/index.html
@@ -49,38 +49,51 @@
       <h2 class="work-label">MY WORK</h2>
 
       <div class="work-container">
-        <div class="work-links">
-          <a href="https://luvthatduck.github.io/run-buddy/"></a>
-          <a href="https://luvthatduck.github.io/horiseon-silver-octo-tribble/"></a>
+        <div class="work-link1">
+          <a href="https://luvthatduck.github.io/run-buddy/">
+            <img src="assets/Screenshot (11).png" alt="website Run-Buddy preview" style="width:450px;height:450px" ;>
+          </a>
+          <span>Run-Buddy</span>
+        </div>
+
+        <div class="work-link1">
+          <a href="https://placeholder.com"><img
+              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a><a
+            href="https://luvthatduck.github.io/horiseon-silver-octo-tribble/"></a>
+          <span>Example 2</span>
+
           <a href="https://placeholder.com"><img
               src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+
+          <span>Example 3</span>
+        </div>
+
+        <div class="work-link1">
           <a href="https://placeholder.com"><img
               src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+          <span>Example 4</span>
+
           <a href="https://placeholder.com"><img
               src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
-          <a href="https://placeholder.com"><img
-              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
-          <a href="https://placeholder.com"><img
-              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
-          <a href="https://placeholder.com"><img
-              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+          <span>Example 5</span>
         </div>
       </div>
     </div>
   </section>
 
-
   <!--contact me section-->
   <section id="contact-me">
     <div class="contact-card">
-      <h2 class="contact-label">Contact Me</h2>
+      <h2 class="contact-label">CONTACT ME</h2>
       <div class="cm-buttons">
         <nav>
           <ul>
             <li>
-              <a href="janell.myrick@gmail.com/" target="_blank"><strong> { Email }</strong> </a>
+              <a href="mailto:janell.myrick@gmail.com" target="_blank"><strong> { Email }</strong> </a>
             </li>
-            <li> <strong>{ P/ 209.620.6638 }</strong></li>
+            <li>
+              <a href="tel:2096206638"> <strong>{Call me at 209-620-6638 }</strong></a>
+            </li>
             <li> <a href="https://www.linkedin.com/in/janell-myrick-2580a0203/" target="_blank"><strong> { LinkedIn
                   }</strong></a></li>
           </ul>
