--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
           <div class="container">
             <h2 class="name">Janell Myrick</h2>
             <p class="title">Full Stack Web Developer</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.
+              <br>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              <br>
+              Repellat aperiam placeat excepturi dolores voluptatibus
+              <br>
+              laudantium nobis magni quam vel architecto odit optio sit,
+              <br>
+              nulla asperiores, tempore sequi eveniet, ipsa harum.
+            </p>
           </div>
           <img class="bio-pic" src="./assets/JanellMyrickProfilePic.jpg" alt="Janell Myrick">
         </div>
@@ -49,34 +58,27 @@
       <h2 class="work-label">MY WORK</h2>
 
       <div class="work-container">
-        <div class="work-link1">
-          <a href="https://luvthatduck.github.io/run-buddy/">
-            <img src="assets/Screenshot (11).png" alt="website Run-Buddy preview" style="width:450px;height:450px" ;>
-          </a>
-          <span>Run-Buddy</span>
+
+        <div class="work-link1" a href="https://luvthatduck.github.io/run-buddy/">
+            <span>Run-Buddy</span>
         </div>
 
-        <div class="work-link1">
-          <a href="https://placeholder.com"><img
-              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a><a
-            href="https://luvthatduck.github.io/horiseon-silver-octo-tribble/"></a>
+        <div class="work-link2">
           <span>Example 2</span>
+        </div>
 
-          <a href="https://placeholder.com"><img
-              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
-
+        <div class="work-link3">
           <span>Example 3</span>
         </div>
 
-        <div class="work-link1">
-          <a href="https://placeholder.com"><img
-              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+        <div class="work-link4">
           <span>Example 4</span>
+        </div>
 
-          <a href="https://placeholder.com"><img
-              src="https://via.placeholder.com/250.png?text=Random+Website+I+Made"></a>
+        <div class="work-link5">
           <span>Example 5</span>
         </div>
+
       </div>
     </div>
   </section>
@@ -92,7 +94,7 @@
               <a href="mailto:janell.myrick@gmail.com" target="_blank"><strong> { Email }</strong> </a>
             </li>
             <li>
-              <a href="tel:2096206638"> <strong>{Call me at 209-620-6638 }</strong></a>
+              <a href="tel:2096206638"> <strong>{ Call me at 209-620-6638 }</strong></a>
             </li>
             <li> <a href="https://www.linkedin.com/in/janell-myrick-2580a0203/" target="_blank"><strong> { LinkedIn
                   }</strong></a></li>
