organized my work section

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
       <div class="work-container">
 
-        <div class="work-link1" a href="https://luvthatduck.github.io/run-buddy/">
-            <span>Run-Buddy</span>
+        <div class="work-link1">
+            <span> <a href="https://luvthatduck.github.io/run-buddy/">Run-Buddy</a></span>
+           
         </div>
 
         <div class="work-link2">
@@ -94,7 +95,7 @@
               <a href="mailto:janell.myrick@gmail.com" target="_blank"><strong> { Email }</strong> </a>
             </li>
             <li>
-              <a href="tel:2096206638"> <strong>{ Call me at 209-620-6638 }</strong></a>
+              <a href="tel:2096206638"> <strong>{ 209-620-6638 }</strong></a>
             </li>
             <li> <a href="https://www.linkedin.com/in/janell-myrick-2580a0203/" target="_blank"><strong> { LinkedIn
                   }</strong></a></li>
