fixed image link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </header>
 
   <!--hero section-->
+  <main>
   <div class="hero">
 
     <!-- About me section -->
@@ -59,10 +60,10 @@
 
       <div class="work-container">
 
-        <div class="work-link1">
-            <span> <a href="https://luvthatduck.github.io/run-buddy/">Run-Buddy</a></span>
+        <a href="https://luvthatduck.github.io/run-buddy/"class="work-link1">
+            <span>Run-Buddy</span>
            
-        </div>
+        </a>
 
         <div class="work-link2">
           <span>Example 2</span>
@@ -104,7 +105,7 @@
       </div>
     </div>
   </section>
-
+</main>
 
 
 
