updated work screenshots and bio

--- a/index.html
+++ b/index.html
@@ -24,88 +24,95 @@
 
   <!--hero section-->
   <main>
-  <div class="hero">
+    <div class="hero">
 
-    <!-- About me section -->
-    <section id="about-me">
-      <div class="card">
-        <h2 class="about-me">ABOUT ME</h2>
-        <div class="main-container">
-          <div class="container">
-            <h2 class="name">Janell Myrick</h2>
-            <p class="title">Full Stack Web Developer</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.
-              <br>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              <br>
-              Repellat aperiam placeat excepturi dolores voluptatibus
-              <br>
-              laudantium nobis magni quam vel architecto odit optio sit,
-              <br>
-              nulla asperiores, tempore sequi eveniet, ipsa harum.
-            </p>
+      <!-- About me section -->
+      <section id="about-me">
+        <div class="card">
+          <h2 class="about-me">ABOUT ME</h2>
+          <div class="main-container">
+            <div class="container">
+              <h2 class="name">Janell Myrick</h2>
+              <h3 class="title">Full Stack Web Developer</h3>
+              <p>July 2021:
+                Full Stack Developer Program </p>
+              <p> University of Utah</p>
+              <p> B.A. Agricultural Studies, Biology
+              <p>California State University Stanislaus </p>
+              </p>
+              <p>A.S. Animal Sciences </p>
+              <p>Modesto Junior College</p>
+
+              <p>Proficient in JavaScript, Node, SQL, 
+              </p>
+              <p>MongoDB, React and more.</p>
+            </div>
+            <img class="bio-pic" src="./assets/JanellMyrickProfilePic.jpg" alt="Janell Myrick">
           </div>
-          <img class="bio-pic" src="./assets/JanellMyrickProfilePic.jpg" alt="Janell Myrick">
+        </div>
+      </section>
+    </div>
+
+
+    <!--my work section -->
+
+    <section id="my-work">
+      <div class="example-container">
+        <h2 class="work-label">MY WORK</h2>
+
+        <div class="work-container">
+
+          <a href="https://luvthatduck.github.io/run-buddy/" class="work-link1">
+            <span>Run-Buddy</span>
+          </a>
+
+          <div>
+            <a href="https://avamariee.github.io/pet-adoption-quiz/index.html" class="work-link2">
+              <span>Pet-Quiz</span>
+            </a>
+          </div>
+
+          <div>
+            <a href="https://luvthatduck.github.io/work-day-scheduler/" class="work-link3">
+              <span>Work Day Scheduler</span>
+            </a>
+          </div>
+
+          <div>
+            <a href="https://luvthatduck.github.io/weather-dashboard/" class="work-link4">
+              <span>Weather Dashboard</span>
+            </a>
+          </div>
+
+          <div class="work-link5">
+            <span>Example 5</span>
+          </div>
+
         </div>
       </div>
     </section>
-  </div>
 
-
-  <!--my work section -->
-
-  <section id="my-work">
-    <div class="example-container">
-      <h2 class="work-label">MY WORK</h2>
-
-      <div class="work-container">
-
-        <a href="https://luvthatduck.github.io/run-buddy/"class="work-link1">
-            <span>Run-Buddy</span>
-           
-        </a>
-
-        <div class="work-link2">
-          <span>Example 2</span>
+    <!--contact me section-->
+    <section id="contact-me">
+      <div class="contact-card">
+        <h2 class="contact-label">CONTACT ME</h2>
+        <div class="cm-buttons">
+          <nav>
+            <ul>
+              <li>
+                <a href="mailto:janell.myrick@gmail.com" target="_blank"><strong> { Email }</strong> </a>
+              </li>
+              <li>
+                <a href="tel:2096206638"> <strong>{ 209-620-6638 }</strong></a>
+              </li>
+              <li> <a href="https://www.linkedin.com/in/janell-myrick-2580a0203/" target="_blank"><strong> { LinkedIn
+                    }</strong></a></li>
+            </ul>
+          </nav>
         </div>
-
-        <div class="work-link3">
-          <span>Example 3</span>
-        </div>
-
-        <div class="work-link4">
-          <span>Example 4</span>
-        </div>
-
-        <div class="work-link5">
-          <span>Example 5</span>
-        </div>
-
       </div>
-    </div>
-  </section>
-
-  <!--contact me section-->
-  <section id="contact-me">
-    <div class="contact-card">
-      <h2 class="contact-label">CONTACT ME</h2>
-      <div class="cm-buttons">
-        <nav>
-          <ul>
-            <li>
-              <a href="mailto:janell.myrick@gmail.com" target="_blank"><strong> { Email }</strong> </a>
-            </li>
-            <li>
-              <a href="tel:2096206638"> <strong>{ 209-620-6638 }</strong></a>
-            </li>
-            <li> <a href="https://www.linkedin.com/in/janell-myrick-2580a0203/" target="_blank"><strong> { LinkedIn
-                  }</strong></a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </section>
-</main>
+    </section>
+  </main>
 
 
 
