added project2 to example 5

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <p>A.S. Animal Sciences </p>
               <p>Modesto Junior College</p>
 
-              <p>Proficient in JavaScript, Node, SQL, 
+              <p>Proficient in JavaScript, Node, SQL,
               </p>
               <p>MongoDB, React and more.</p>
             </div>
@@ -84,8 +84,10 @@
             </a>
           </div>
 
-          <div class="work-link5">
-            <span>Example 5</span>
+          <div>
+            <a href="https://peer2peer-delivery.herokuapp.com/" class="work-link5">
+              <span>peer2peer Delivery</span>
+            </a>
           </div>
 
         </div>
